Rename products.html to index.html for homepage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>代採購大平台</h1>
       <nav>
         <a href="#">代購商品</a>
-        <a href="products.html">自售商品</a>
+        <a href="index.html">自售商品</a>
         <a href="#">訂單查詢</a>
         <a href="checkout.html">購物車</a>
       </nav>
