--- a/orders-admin.html
+++ b/orders-admin.html
@@ -9,9 +9,10 @@
   <body>
     <div class="container" style="max-width: 1200px">
       <h1>後台訂單管理</h1>
-      <nav>
+      <nav class="admin-nav">
         <a href="admin.html">商品管理</a>
         <a href="orders-admin.html"><strong>訂單管理</strong></a>
+        <a href="#" id="logout-btn">登出</a>
       </nav>
 
       <section class="admin-section">
