--- a/login.html
+++ b/login.html
@@ -10,7 +10,10 @@
     <div class="container" style="max-width: 400px; margin-top: 10%">
       <h1>後台管理登入</h1>
       <form id="login-form" class="admin-form">
-        <div id="error-message" style="color: red; margin-bottom: 15px"></div>
+        <div
+          id="error-message"
+          style="color: #c82333; margin-bottom: 15px; text-align: center"
+        ></div>
         <div class="form-group">
           <label for="username">帳號</label>
           <input type="text" id="username" required />
