--- a/index.html
+++ b/index.html
@@ -8,20 +8,30 @@
   </head>
   <body>
     <header class="site-header">
-      <h1>代採購大平台</h1>
-      <nav>
-        <a href="index.html">自售商品</a>
-        <a href="#">代購商品</a>
-        <a href="#">訂單查詢</a>
-        <a href="checkout.html">購物車</a>
-        <a href="login.html" class="login-link">後台登入</a>
-      </nav>
+      <div class="header-content">
+        <h1 class="site-title">代採購大平台</h1>
+        <nav class="main-nav">
+          <a href="index.html">自售商品</a>
+          <a href="#">代購商品</a>
+          <a href="#">訂單查詢</a>
+          <a href="checkout.html">購物車</a>
+        </nav>
+      </div>
     </header>
 
-    <div class="container">
-      <h2>自售商品專區</h2>
-      <div class="product-grid"></div>
-    </div>
+    <main class="container">
+      <section class="page-section">
+        <h2>自售商品專區</h2>
+        <div class="product-grid"></div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <p>&copy; 2025 代採購大平台. All Rights Reserved.</p>
+      <div class="footer-links">
+        <a href="login.html" class="admin-login-link">管理者登入</a>
+      </div>
+    </footer>
 
     <script src="js/cart.js" defer></script>
     <script src="js/products.js" defer></script>
