Add admin login link to homepage

--- a/admin.html
+++ b/admin.html
@@ -10,9 +10,10 @@
     <div class="container">
       <h1>後台商品管理</h1>
       <nav class="admin-nav">
+        <a href="index.html" class="nav-link">回到商店</a>
         <a href="admin.html"><strong>商品管理</strong></a>
         <a href="orders-admin.html">訂單管理</a>
-        <a href="#" id="logout-btn">登出</a>
+        <a href="profile.html">修改密碼</a> <a href="#" id="logout-btn">登出</a>
       </nav>
 
       <section class="admin-section">
