--- a/checkout.html
+++ b/checkout.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>代採購大平台 - 結帳頁面</title>
+    <title>訂單結帳 - 代採購大平台</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>結帳</h1>
+    <main class="checkout-container">
+      <div class="checkout-header">
+        <h1>訂單結帳</h1>
+        <a href="index.html">返回商店首頁</a>
+      </div>
 
-      <section>
-        <h2>1. 購物車明細</h2>
+      <section class="checkout-section">
+        <h3>您的購物車明細</h3>
         <table class="cart-table">
           <thead>
             <tr>
@@ -19,35 +22,51 @@
               <th>單價</th>
               <th>數量</th>
               <th>小計</th>
+              <th>操作</th>
             </tr>
           </thead>
           <tbody id="cart-items-body"></tbody>
         </table>
-        <div class="cart-total" id="cart-total"></div>
+        <div class="cart-summary" id="cart-summary"></div>
       </section>
 
-      <section>
-        <h2>2. 付款與出貨資料</h2>
-        <div class="payment-info">
-          <p><strong>請匯款至以下帳號:</strong></p>
-          <p>富邦銀行 (012)</p>
+      <section class="checkout-section">
+        <h3>請匯款至以下帳戶</h3>
+        <div class="payment-details">
+          <p><span>銀行:</span> <strong>富邦銀行 (012)</strong></p>
           <p>
-            帳號: <span id="bank-account">81680013793778</span>
-            <button id="copy-btn">一鍵複製</button>
+            <span>帳號:</span>
+            <span>
+              <strong id="bank-account">81680013793778</strong>
+              <button id="copy-btn">一鍵複製</button>
+            </span>
           </p>
         </div>
-        <div class="form-group" style="margin-top: 20px">
+      </section>
+
+      <section class="checkout-section">
+        <div class="form-group">
           <label for="paopaohu-id">跑跑虎集運會員編號 (必填)</label>
-          <input type="text" id="paopaohu-id" name="paopaohu-id" required />
+          <input
+            type="text"
+            id="paopaohu-id"
+            placeholder="請輸入您在跑跑虎的會員編號"
+            required
+          />
         </div>
         <div class="form-group">
-          <label for="last-five">匯款帳號末五碼 (必填)</label>
-          <input type="text" id="last-five" name="last-five" required />
+          <label for="last-five">您的匯款帳號末五碼 (必填)</label>
+          <input
+            type="text"
+            id="last-five"
+            placeholder="請輸入 5 位數字"
+            required
+          />
         </div>
       </section>
 
-      <section class="final-confirmation">
-        <h2>3. ⚠️ 最終確認</h2>
+      <section class="checkout-section final-confirmation">
+        <h3>⚠️ 最終確認</h3>
         <p>
           我確認本服務僅負責代為採購商品並寄送至指定之跑跑虎集運(深圳)倉，後續大陸到台灣的運費將由我自行在跑跑虎APP操作並支付。
         </p>
@@ -63,8 +82,10 @@
         </div>
       </section>
 
-      <button id="submit-btn" class="disabled" disabled>確認下單</button>
-    </div>
+      <button id="submit-btn" class="btn-submit disabled" disabled>
+        確認下單，送出訂單
+      </button>
+    </main>
 
     <script src="js/cart.js" defer></script>
     <script src="js/script.js" defer></script>
