--- a/login.html
+++ b/login.html
@@ -3,76 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>代採購大平台</title>
+    <title>後台登入</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="site-header">
-      <div class="header-content">
-        <h1 class="site-title">代採購大平台</h1>
-        <nav class="main-nav">
-          <a href="index.html">自售商品</a>
-          <a href="#">代購商品</a>
-          <a href="#">訂單查詢</a>
-          <a href="checkout.html">購物車</a>
-        </nav>
+    <div class="container" style="max-width: 450px; margin-top: 8%">
+      <h1 style="text-align: center; border-bottom: none">後台管理登入</h1>
+      <div class="page-section" style="margin-top: 20px">
+        <form id="login-form">
+          <div
+            id="error-message"
+            style="
+              color: #c82333;
+              margin-bottom: 15px;
+              text-align: center;
+              min-height: 1.2em;
+            "
+          ></div>
+          <div class="form-group">
+            <label for="username">帳號</label>
+            <input type="text" id="username" required />
+          </div>
+          <div class="form-group">
+            <label for="password">密碼</label>
+            <input type="password" id="password" required />
+          </div>
+          <button type="submit" class="btn-submit">登入</button>
+        </form>
       </div>
-    </header>
-
-    <main class="container">
-      <div class="important-reminder">
-        <h3>⚠️ 重要提醒，請務必詳讀 ⚠️</h3>
-        <p>
-          <strong>1. 關於價格：</strong
-          >頁面顯示的【台幣價格】即為您需要支付的全部費用，已包含代購服務費。
-        </p>
-        <p>
-          <strong>2. 關於運費：</strong
-          >本站不經手任何運費。貨物送達後，您需自行登入「跑跑虎集運APP」支付國際運費。
-        </p>
-        <p>
-          <strong>3. 關於出貨：</strong>請務必填寫正確的「跑跑虎集運」會員編號。
-        </p>
-        <p>
-          <strong>跑跑虎APP下載：</strong>
-          <a
-            href="https://apps.apple.com/tw/app/%E8%B7%91%E8%B7%91%E8%99%E8%99%E/id6742644160"
-            target="_blank"
-            rel="noopener noreferrer"
-            >iOS 蘋果系統</a
-          >
-          |
-          <a
-            href="https://play.google.com/store/apps/details?id=com.paodekuai.runtigerglobal"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Android 安卓系統</a
-          >
-        </p>
+      <div style="text-align: center; margin-top: 20px">
+        <a href="index.html">返回商店首頁</a>
       </div>
-
-      <h2>自售商品列表</h2>
-      <div class="product-grid"></div>
-    </main>
-
-    <a
-      href="https://lin.ee/kMECpME"
-      target="_blank"
-      rel="noopener noreferrer"
-      class="line-fab"
-    >
-      <img
-        src="https://scdn.line-apps.com/n/line_add_friends/btn/zh-Hant.png"
-        alt="加入好友"
-      />
-    </a>
-
-    <footer class="site-footer">
-      <p>&copy; 2025 代採購大平台. All Rights Reserved.</p>
-      <a href="login.html" class="admin-login-link">管理者登入</a>
-    </footer>
-
-    <script src="js/cart.js" defer></script>
-    <script src="js/products.js" defer></script>
+    </div>
+    <script src="js/login.js" defer></script>
   </body>
 </html>
