--- a/checkout.html
+++ b/checkout.html
@@ -18,7 +18,7 @@
         <table class="cart-table">
           <thead>
             <tr>
-              <th>商品名稱</th>
+              <th style="width: 45%">商品名稱</th>
               <th>單價</th>
               <th>數量</th>
               <th>小計</th>
