--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="header-content">
         <h1 class="site-title">代採購大平台</h1>
         <nav class="main-nav">
-          <a href="index.html">自售商品</a>
-          <a href="#">代購商品</a>
+          <a href="index.html">批發貨源</a>
+          <a href="#">代採購</a>
           <a href="#">訂單查詢</a>
           <a href="checkout.html">購物車</a>
         </nav>
@@ -20,11 +20,54 @@
     </header>
 
     <main class="container">
-      <section class="page-section">
-        <h2>自售商品專區</h2>
+      <div class="important-reminder">
+        <h3>⚠️ 重要提醒，請務必詳讀 ⚠️</h3>
+        <p>
+          <strong>1. 關於價格：</strong
+          >頁面顯示的【台幣價格】即為您需要支付的全部費用，已包含代購服務費。
+        </p>
+        <p>
+          <strong>2. 關於運費：</strong
+          >本站不經手任何運費。貨物送達後，您需自行登入「跑跑虎集運APP」支付國際運費。
+        </p>
+        <p>
+          <strong>3. 關於出貨：</strong>請務必填寫正確的「跑跑虎集運」會員編號。
+        </p>
+        <p>
+          <strong>跑跑虎APP下載：</strong>
+          <a
+            href="https://apps.apple.com/tw/app/%E8%B7%91%E8%B7%91%E8%99%E8%99%E/id6742644160"
+            target="_blank"
+            rel="noopener noreferrer"
+            >iOS 蘋果系統</a
+          >
+          |
+          <a
+            href="https://play.google.com/store/apps/details?id=com.paodekuai.runtigerglobal"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Android 安卓系統</a
+          >
+        </p>
+      </div>
+
+      <div class="page-section">
+        <h2>批發貨源列表</h2>
         <div class="product-grid"></div>
-      </section>
+      </div>
     </main>
+
+    <a
+      href="https://lin.ee/kMECpME"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="line-fab"
+    >
+      <img
+        src="https://scdn.line-apps.com/n/line_add_friends/btn/zh-Hant.png"
+        alt="加入好友"
+      />
+    </a>
 
     <footer class="site-footer">
       <p>&copy; 2025 代採購大平台. All Rights Reserved.</p>
