Apply new UI design and fix homepage reminders

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1 class="site-title">代採購大平台</h1>
         <nav class="main-nav">
           <a href="index.html">批發貨源</a>
-          <a href="#">代採購</a>
-          <a href="#">訂單查詢</a>
+          <a href="request.html">代採購</a>
+          <a href="lookup.html">訂單查詢</a>
           <a href="checkout.html">購物車</a>
         </nav>
       </div>
