Apply new UI design and fix homepage reminders

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>
           <strong>跑跑虎APP下載：</strong>
           <a
-            href="https://apps.apple.com/tw/app/%E8%B7%91%E8%B7%91%E8%99%E8%99%E/id6742644160"
+            href="https://reurl.cc/koE57x"
             target="_blank"
             rel="noopener noreferrer"
             >iOS 蘋果系統</a
