--- a/request.html
+++ b/request.html
@@ -13,7 +13,7 @@
         <nav class="main-nav">
           <a href="index.html">批發貨源</a>
           <a href="request.html">代採購</a>
-          <a href="#">訂單查詢</a>
+          <a href="lookup.html">訂單查詢</a>
           <a href="checkout.html">購物車</a>
         </nav>
       </div>
