Revamp checkout page and cart functionality

--- a/checkout.html
+++ b/checkout.html
@@ -33,11 +33,11 @@
       <section class="checkout-section">
         <h3>請匯款至以下帳戶</h3>
         <div class="payment-details">
-          <p><span>銀行:</span> <strong>富邦銀行 (012)</strong></p>
+          <p><span>銀行:</span> <strong>中華郵政 (700)</strong></p>
           <p>
             <span>帳號:</span>
             <span>
-              <strong id="bank-account">81680013793778</strong>
+              <strong id="bank-account">00314790138491</strong>
               <button id="copy-btn">一鍵複製</button>
             </span>
           </p>
