--- a/checkout.html
+++ b/checkout.html
@@ -18,8 +18,9 @@
         <table class="cart-table">
           <thead>
             <tr>
-              <th style="width: 45%">商品名稱</th>
+              <th style="width: 40%">商品名稱</th>
               <th>單價</th>
+              <th>服務費</th>
               <th>數量</th>
               <th>小計</th>
               <th>操作</th>
