--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>
           <strong>跑跑虎APP下載：</strong>
           <a
-            href="https://reurl.cc/koE57x"
+            href="https://apps.apple.com/tw/app/%E8%B7%91%E8%B7%91%E8%99%E8%99%E/id6742644160"
             target="_blank"
             rel="noopener noreferrer"
             >iOS 蘋果系統</a
@@ -53,6 +53,8 @@
 
       <div class="page-section">
         <h2>批發貨源列表</h2>
+
+        <div id="category-filters" class="category-filters"></div>
         <div class="product-grid"></div>
       </div>
     </main>
