Revert payment account to Fubon Bank

--- a/requests-admin.html
+++ b/requests-admin.html
@@ -3,38 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>後台訂單管理</title>
+    <title>代採購請求管理</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container" style="max-width: 1200px">
-      <h1>後台訂單管理</h1>
+    <div class="container" style="max-width: 1400px">
+      <h1>後台管理</h1>
       <nav class="admin-nav">
         <a href="index.html" class="nav-link">回到商店</a>
         <a href="admin.html">商品管理</a>
         <a href="orders-admin.html">訂單管理</a>
-        <a href="requests-admin.html"><strong>代採購請求</strong></a>
+        <a href="requests-admin.html"><strong>代採購請求管理</strong></a>
         <a href="profile.html">修改密碼</a>
         <a href="#" id="logout-btn">登出</a>
       </nav>
 
       <section class="admin-section">
-        <h2>所有訂單列表</h2>
+        <h2>所有代採購請求列表</h2>
         <table class="admin-table">
           <thead>
             <tr>
-              <th>訂單編號</th>
-              <th>下單時間</th>
-              <th>跑跑虎編號</th>
-              <th>總金額</th>
-              <th>商品詳情</th>
+              <th>請求時間</th>
+              <th>跑跑虎ID</th>
+              <th>聯絡方式</th>
+              <th>商品連結</th>
+              <th>商品/規格/數量</th>
+              <th>備註</th>
               <th>狀態</th>
             </tr>
           </thead>
-          <tbody id="order-list-body"></tbody>
+          <tbody id="request-list-body"></tbody>
         </table>
       </section>
     </div>
-    <script src="js/orders-admin.js" defer></script>
+    <script src="js/requests-admin.js" defer></script>
   </body>
 </html>
