--- a/admin.html
+++ b/admin.html
@@ -11,8 +11,9 @@
       <h1>後台商品管理</h1>
       <nav class="admin-nav">
         <a href="index.html" class="nav-link">回到商店</a>
-        <a href="admin.html"><strong>商品管理</strong></a>
+        <a href="admin.html">商品管理</a>
         <a href="orders-admin.html">訂單管理</a>
+        <a href="requests-admin.html"><strong>代採購請求</strong></a>
         <a href="profile.html">修改密碼</a>
         <a href="#" id="logout-btn">登出</a>
       </nav>
