--- a/request.html
+++ b/request.html
@@ -33,7 +33,6 @@
               >本公司僅提供代購與下單服務，不參與商品挑選、驗貨、售後或品質擔保。</strong
             >
           </p>
-
           <h4 class="declaration-subtitle">📌 付款金額說明：</h4>
           <ul>
             <li>商品金額（人民幣） × 匯率 4.5</li>
@@ -42,7 +41,6 @@
             <li>台灣段跨境運費請至跑跑虎集運APP操作</li>
             <li>本公司將開立商品金額之發票</li>
           </ul>
-
           <h4 class="declaration-subtitle">📌 免責事項如下：</h4>
           <ul>
             <li>
@@ -105,6 +103,15 @@
               id="product-quantity"
               value="1"
               min="1"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="paopaohu-id">您的跑跑虎集運會員編號 (必填)</label>
+            <input
+              type="text"
+              id="paopaohu-id"
+              placeholder="方便我們處理後續配送"
               required
             />
           </div>
