--- a/orders-admin.html
+++ b/orders-admin.html
@@ -13,7 +13,8 @@
         <a href="index.html" class="nav-link">回到商店</a>
         <a href="admin.html">商品管理</a>
         <a href="orders-admin.html">訂單管理</a>
-        <a href="requests-admin.html"><strong>代採購請求</strong></a>
+        <a href="requests-admin.html">代採購請求</a>
+        <a href="users-admin.html"><strong>使用者管理</strong></a>
         <a href="profile.html">修改密碼</a>
         <a href="#" id="logout-btn">登出</a>
       </nav>
