--- a/profile.html
+++ b/profile.html
@@ -12,9 +12,13 @@
       <nav class="admin-nav">
         <a href="index.html" class="nav-link">回到商店</a>
         <a href="admin.html">商品管理</a>
-        <a href="orders-admin.html">訂單管理</a>
-        <a href="requests-admin.html">代採購請求</a>
-        <a href="users-admin.html"><strong>使用者管理</strong></a>
+        <a href="orders-admin.html"
+          >訂單管理<span class="notification-badge" id="orders-badge"></span
+        ></a>
+        <a href="requests-admin.html"
+          >代採購請求<span class="notification-badge" id="requests-badge"></span
+        ></a>
+        <a href="users-admin.html">使用者管理</a>
         <a href="profile.html">修改密碼</a>
         <a href="#" id="logout-btn">登出</a>
       </nav>
@@ -40,5 +44,6 @@
       </section>
     </div>
     <script src="js/profile.js" defer></script>
+    <script src="js/admin-main.js" defer></script>
   </body>
 </html>
