--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         </p>
         <p>
           <strong>2. 關於運費：</strong
-          >本站不經手任何運費。貨物送達後，您需自行登入「跑跑虎集運APP」支付國際運費。
+          ><span class="text-danger"
+            >本站不經手任何運費。貨物送達後，您需自行登入「跑跑虎集運APP」支付國際運費。</span
+          >
         </p>
         <p>
           <strong>3. 關於出貨：</strong>請務必填寫正確的「跑跑虎集運」會員編號。
@@ -36,7 +38,7 @@
         <p>
           <strong>跑跑虎APP下載：</strong>
           <a
-            href="https://reurl.cc/koE57x"
+            href="https://apps.apple.com/tw/app/%E8%B7%91%E8%B7%91%E8%99%E8%99%E/id6742644160"
             target="_blank"
             rel="noopener noreferrer"
             >iOS 蘋果系統</a
