--- a/checkout.html
+++ b/checkout.html
@@ -56,6 +56,23 @@
           />
         </div>
         <div class="form-group">
+          <label for="customer-email">E-mail (必填)</label>
+          <input
+            type="email"
+            id="customer-email"
+            placeholder="您的電子郵件信箱，用於接收訂單確認"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="tax-id">統一編號 (選填)</label>
+          <input
+            type="text"
+            id="tax-id"
+            placeholder="如需開立三聯式發票，請填寫統一編號"
+          />
+        </div>
+        <div class="form-group">
           <label for="last-five">您的匯款帳號末五碼 (必填)</label>
           <input
             type="text"
