Fix: Correct API_BASE_URL across all frontend scripts

--- a/checkout.html
+++ b/checkout.html
@@ -2,8 +2,9 @@
 <html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale-1.0" />
     <title>訂單結帳 - 代採購大平台</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -46,6 +47,7 @@
       </section>
 
       <section class="checkout-section">
+        <h3>客戶資訊</h3>
         <div class="form-group">
           <label for="paopaohu-id">跑跑虎集運會員編號 (必填)</label>
           <input
@@ -86,7 +88,10 @@
       <section class="checkout-section final-confirmation">
         <h3>⚠️ 最終確認</h3>
         <p>
-          我確認本服務僅負責代為採購商品並寄送至指定之跑跑虎集運(深圳)倉，後續大陸到台灣的運費將由我自行在跑跑虎APP操作並支付。
+          我確認本服務僅負責代為採購商品並寄送至指定之跑跑虎集運(<span
+            class="text-danger"
+            >深圳</span
+          >)倉，後續大陸到台灣的運費將由我自行在跑跑虎APP操作並支付。
         </p>
         <div class="form-group">
           <label for="confirmation-input"
