優化gemini的建議

--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,9 @@
       <h1>後台商品管理</h1>
       <nav class="admin-nav">
         <a href="index.html" class="nav-link">回到商店</a>
+        <a href="dashboard.html">績效儀表板</a>
         <a href="admin.html"><strong>商品管理</strong></a>
+        <a href="category-admin.html">分類管理</a>
         <a href="orders-admin.html"
           >訂單管理<span class="notification-badge" id="orders-badge"></span
         ></a>
