--- a/category-admin.html
+++ b/category-admin.html
@@ -3,69 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>使用者管理</title>
+    <title>分類管理 - 代採購大平台</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container" style="max-width: 1000px">
+    <div class="container" style="max-width: 800px">
       <h1>後台管理</h1>
       <nav class="admin-nav">
         <a href="index.html" class="nav-link">回到商店</a>
         <a href="dashboard.html">績效儀表板</a>
         <a href="admin.html">商品管理</a>
-        <a href="category-admin.html">分類管理</a>
+        <a href="category-admin.html"><strong>分類管理</strong></a>
         <a href="orders-admin.html"
           >訂單管理<span class="notification-badge" id="orders-badge"></span
         ></a>
         <a href="requests-admin.html"
           >代採購請求<span class="notification-badge" id="requests-badge"></span
         ></a>
-        <a href="users-admin.html"><strong>使用者管理</strong></a>
+        <a href="users-admin.html">使用者管理</a>
         <a href="profile.html">修改密碼</a>
         <a href="#" id="logout-btn">登出</a>
       </nav>
 
       <section class="admin-section">
-        <h2>新增使用者</h2>
-        <form id="add-user-form" class="admin-form">
+        <h2>新增分類</h2>
+        <form id="add-category-form" class="admin-form">
           <div
             id="response-message"
             style="margin-bottom: 15px; text-align: center"
           ></div>
           <div class="form-group">
-            <label for="username">新使用者帳號</label
-            ><input type="text" id="username" required />
+            <label for="category-name">新分類名稱</label>
+            <input
+              type="text"
+              id="category-name"
+              placeholder="例如：義烏商品"
+              required
+            />
           </div>
-          <div class="form-group">
-            <label for="password">新使用者密碼</label
-            ><input type="password" id="password" required />
-          </div>
-          <div class="form-group">
-            <label for="role">角色</label>
-            <select id="role">
-              <option value="employee">員工 (Employee)</option>
-              <option value="admin">管理員 (Admin)</option>
-            </select>
-          </div>
-          <button type="submit" class="btn-primary">建立帳號</button>
+          <button type="submit" class="btn-primary">建立新分類</button>
         </form>
       </section>
 
       <section class="admin-section">
-        <h2>現有使用者列表</h2>
-        <table class="admin-table">
+        <h2>現有分類列表</h2>
+        <table class="admin-table data-table">
           <thead>
             <tr>
-              <th>使用者帳號</th>
-              <th>角色</th>
-              <th>操作</th>
+              <th>分類名稱</th>
+              <th style="width: 100px">操作</th>
             </tr>
           </thead>
-          <tbody id="user-list-body"></tbody>
+          <tbody id="category-list-body"></tbody>
         </table>
       </section>
     </div>
-    <script src="js/users-admin.js" defer></script>
     <script src="js/admin-main.js" defer></script>
+    <script src="js/category-admin.js" defer></script>
   </body>
 </html>
