--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,9 @@
       <h1>帳戶設定</h1>
       <nav class="admin-nav">
         <a href="index.html" class="nav-link">回到商店</a>
+        <a href="dashboard.html">績效儀表板</a>
         <a href="admin.html">商品管理</a>
+        <a href="category-admin.html">分類管理</a>
         <a href="orders-admin.html"
           >訂單管理<span class="notification-badge" id="orders-badge"></span
         ></a>
@@ -19,7 +21,7 @@
           >代採購請求<span class="notification-badge" id="requests-badge"></span
         ></a>
         <a href="users-admin.html">使用者管理</a>
-        <a href="profile.html">修改密碼</a>
+        <a href="profile.html"><strong>修改密碼</strong></a>
         <a href="#" id="logout-btn">登出</a>
       </nav>
 
