--- a/requests-admin.html
+++ b/requests-admin.html
@@ -11,12 +11,15 @@
       <h1>後台管理</h1>
       <nav class="admin-nav">
         <a href="index.html" class="nav-link">回到商店</a>
+        <a href="dashboard.html">績效儀表板</a>
         <a href="admin.html">商品管理</a>
+        <a href="category-admin.html">分類管理</a>
         <a href="orders-admin.html"
           >訂單管理<span class="notification-badge" id="orders-badge"></span
         ></a>
         <a href="requests-admin.html"
-          >代採購請求<span class="notification-badge" id="requests-badge"></span
+          ><strong>代採購請求</strong
+          ><span class="notification-badge" id="requests-badge"></span
         ></a>
         <a href="users-admin.html">使用者管理</a>
         <a href="profile.html">修改密碼</a>
