Fix: Correct API_BASE_URL across all frontend scripts

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
       <h1>後台管理</h1>
       <nav class="admin-nav">
         <a href="index.html" class="nav-link">回到商店</a>
-        <a href="dashboard.html"><strong>績效儀表板</strong></a>
+        <a href="dashboard.html">績效儀表板</a>
         <a href="admin.html">商品管理</a>
         <a href="category-admin.html">分類管理</a>
         <a href="orders-admin.html"
