--- a/orders-admin.html
+++ b/orders-admin.html
@@ -16,8 +16,7 @@
         <a href="admin.html">商品管理</a>
         <a href="category-admin.html">分類管理</a>
         <a href="orders-admin.html"
-          ><strong>訂單管理</strong
-          ><span class="notification-badge" id="orders-badge"></span
+          >訂單管理<span class="notification-badge" id="orders-badge"></span
         ></a>
         <a href="requests-admin.html"
           >代採購請求<span class="notification-badge" id="requests-badge"></span
