--- a/category-admin.html
+++ b/category-admin.html
@@ -3,61 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>分類管理 - 代採購大平台</title>
+    <title>分類管理</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="container" style="max-width: 800px">
-      <h1>後台管理</h1>
-      <nav class="admin-nav">
-        <a href="index.html" class="nav-link">回到商店</a>
-        <a href="dashboard.html">績效儀表板</a>
-        <a href="admin.html">商品管理</a>
-        <a href="category-admin.html"><strong>分類管理</strong></a>
-        <a href="orders-admin.html"
-          >訂單管理<span class="notification-badge" id="orders-badge"></span
-        ></a>
-        <a href="requests-admin.html"
-          >代採購請求<span class="notification-badge" id="requests-badge"></span
-        ></a>
-        <a href="users-admin.html">使用者管理</a>
-        <a href="profile.html">修改密碼</a>
-        <a href="#" id="logout-btn">登出</a>
-      </nav>
+      <header class="site-header">
+        <div class="header-content">
+          <a href="index.html" class="site-logo-link"
+            ><img
+              src="images/logo.png"
+              alt="代採購大平台 LOGO"
+              class="site-logo"
+          /></a>
+          <nav class="main-nav">
+            <a href="dashboard.html">返回後台</a>
+          </nav>
+        </div>
+      </header>
 
-      <section class="admin-section">
-        <h2>新增分類</h2>
-        <form id="add-category-form" class="admin-form">
-          <div
-            id="response-message"
-            style="margin-bottom: 15px; text-align: center"
-          ></div>
-          <div class="form-group">
-            <label for="category-name">新分類名稱</label>
-            <input
-              type="text"
-              id="category-name"
-              placeholder="例如：義烏商品"
-              required
-            />
+      <main style="margin-top: 40px">
+        <section class="admin-section">
+          <h2>新增分類</h2>
+          <form id="add-category-form" class="admin-form">
+            <div
+              id="response-message"
+              style="margin-bottom: 15px; text-align: center"
+            ></div>
+            <div class="form-group">
+              <label for="category-name">新分類名稱</label>
+              <input
+                type="text"
+                id="category-name"
+                placeholder="例如：義烏商品"
+                required
+              />
+            </div>
+            <button type="submit" class="btn-primary">建立新分類</button>
+          </form>
+        </section>
+
+        <section class="admin-section">
+          <h2>現有分類列表</h2>
+          <div class="table-responsive">
+            <table class="admin-table data-table">
+              <thead>
+                <tr>
+                  <th>分類名稱</th>
+                  <th style="width: 100px">操作</th>
+                </tr>
+              </thead>
+              <tbody id="category-list-body"></tbody>
+            </table>
           </div>
-          <button type="submit" class="btn-primary">建立新分類</button>
-        </form>
-      </section>
-
-      <section class="admin-section">
-        <h2>現有分類列表</h2>
-        <table class="admin-table data-table">
-          <thead>
-            <tr>
-              <th>分類名稱</th>
-              <th style="width: 100px">操作</th>
-            </tr>
-          </thead>
-          <tbody id="category-list-body"></tbody>
-        </table>
-      </section>
+        </section>
+      </main>
     </div>
     <script src="js/admin-main.js" defer></script>
     <script src="js/category-admin.js" defer></script>
