--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
           >代採購請求<span class="notification-badge" id="requests-badge"></span
         ></a>
         <a href="users-admin.html">使用者管理</a>
-        <a href="profile.html"><strong>修改密碼</strong></a>
+        <a href="profile.html">修改密碼</a>
         <a href="#" id="logout-btn">登出</a>
       </nav>
 
