--- a/requests-admin.html
+++ b/requests-admin.html
@@ -18,8 +18,7 @@
           >訂單管理<span class="notification-badge" id="orders-badge"></span
         ></a>
         <a href="requests-admin.html"
-          ><strong>代採購請求</strong
-          ><span class="notification-badge" id="requests-badge"></span
+          >代採購請求<span class="notification-badge" id="requests-badge"></span
         ></a>
         <a href="users-admin.html">使用者管理</a>
         <a href="profile.html">修改密碼</a>
