--- a/users-admin.html
+++ b/users-admin.html
@@ -20,7 +20,7 @@
         <a href="requests-admin.html"
           >代採購請求<span class="notification-badge" id="requests-badge"></span
         ></a>
-        <a href="users-admin.html"><strong>使用者管理</strong></a>
+        <a href="users-admin.html">使用者管理</a>
         <a href="profile.html">修改密碼</a>
         <a href="#" id="logout-btn">登出</a>
       </nav>
