--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
             class="site-logo"
           />
         </a>
-        <nav class="main-nav">
-          <a href="index.html" class="active">批發貨源</a>
-          <a href="request.html">代採購</a>
-          <a href="lookup.html">訂單查詢</a>
+
+        <nav class="main-nav desktop-nav">
+          <a href="index.html" class="nav-link-item active">批發貨源</a>
+          <a href="request.html" class="nav-link-item">代採購</a>
+          <a href="lookup.html" class="nav-link-item">訂單查詢</a>
+        </nav>
+
+        <div class="header-actions">
           <a href="checkout.html" class="cart-nav-link" title="前往購物車">
             <svg
               class="cart-icon"
@@ -42,7 +46,24 @@
               >0</span
             >
           </a>
-        </nav>
+          <button
+            id="hamburger-btn"
+            class="hamburger-btn"
+            aria-label="開啟選單"
+          >
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+        </div>
+      </div>
+      <div id="mobile-menu" class="mobile-menu">
+        <a href="index.html">批發貨源</a>
+        <a href="request.html">代採購</a>
+        <a href="lookup.html">訂單查詢</a>
+        <hr />
+        <a href="profile.html">會員中心</a>
+        <a href="login.html">登入</a>
       </div>
     </header>
 
@@ -119,7 +140,8 @@
       </div>
     </footer>
 
-    <script src="js/cart.js"></script>
-    <script src="js/products.js"></script>
+    <script src="js/cart.js" defer></script>
+    <script src="js/admin-main.js" defer></script>
+    <script src="js/products.js" defer></script>
   </body>
 </html>
