--- a/admin.html
+++ b/admin.html
@@ -96,8 +96,13 @@
               </select>
             </div>
             <div class="form-group full-width">
-              <label for="add-imageUrl">圖片網址 *</label>
-              <input type="text" id="add-imageUrl" required />
+              <label for="add-imageUrl">圖片/影片網址 *</label>
+              <input
+                type="text"
+                id="add-imageUrl"
+                required
+                placeholder="輸入圖片網址或 TikTok 影片連結"
+              />
             </div>
             <div class="form-group full-width">
               <label for="add-tags">商品標籤 (用逗號 , 分隔)</label>
@@ -217,7 +222,7 @@
               </select>
             </div>
             <div class="form-group full-width">
-              <label for="edit-imageUrl">圖片網址 *</label>
+              <label for="edit-imageUrl">圖片/影片網址 *</label>
               <input type="text" id="edit-imageUrl" required />
             </div>
             <div class="form-group full-width">
